plugins {
    id 'java'
    id 'war'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    compileOnly('jakarta.servlet:jakarta.servlet-api:6.0.0')

    implementation('jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0')
    implementation('org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1')

    implementation('org.slf4j:slf4j-api:2.0.0-alpha1')
    implementation('ch.qos.logback:logback-classic:1.4.12')

    implementation("mysql:mysql-connector-java:8.0.33")
    implementation("com.zaxxer:HikariCP:5.0.1")

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testImplementation("org.assertj:assertj-core:3.26.0")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    testImplementation('org.apache.tomcat.embed:tomcat-embed-core:10.1.9')
    testImplementation('org.apache.tomcat.embed:tomcat-embed-jasper:10.1.9')
}

test {
    useJUnitPlatform()
}